<resources>
    <string name="app_name">MohammadAliLab111</string>
    <!-- Mohammad Ali Fouladi N01547173-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contacts">Contacts</string>
    <string name="NameID">MohammadAli Fouladi N01547173</string>
    <string name="ceng_258">CENG-258</string>
    <string name="enter_course_description">Enter course description</string>
    <string name="alloweddescription">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ ,.-\'</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="course_added">Course added</string>
    <string name="no_courses_to_delete">No courses to delete</string>
    <string name="all_courses_deleted">All courses deleted</string>
    <string name="InvalidName">Invalid course name pattern. Must be 3 uppercase letters followed by 3 or 4 digits.</string>
    <string name="course_name_is_required">Course name is required</string>
    <string name="course_description_is_required">Course description is required</string>
    <string name="title_activity_fouladi">Fouladi</string>
    <string name="Fullnameid">Mohammad Ali Fouladi N01547173</string>
    <string name="name">Mohammad Ali</string>
    <string name="humber_college">Humber College</string>
    <string name="toronto">"Toronto "</string>
    <string name="nameShort">Moe Fouladi</string>
    <string name="dismiss">Dismiss</string>
    <string name="welcome_message">Welcome to Lab11</string>
    <string name="moe_rotated_45">Moe rotated -45</string>
    <string name="moe_rotated_45p">Moe rotated 45</string>
    <string name="send_sms">Send SMS</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_message">Enter message</string>
    <string name="sms_not_delivered">SMS not delivered</string>
    <string name="sms_delivered">SMS delivered</string>
    <string name="radio_off">Radio off</string>
    <string name="null_pdu">Null PDU</string>
    <string name="no_service">No service</string>
    <string name="generic_failure">Generic failure</string>
    <string name="sms_permission_denied">SMS permission denied</string>
    <string name="phone_number_cannot_be_empty">Phone number cannot be empty</string>
    <string name="phone_number_must_be_10_digits">Phone number must be 10 digits</string>
    <string name="message_cannot_be_empty">Message cannot be empty</string>
    <string name="sms_sent">SMS sent</string>
    <string name="click_count">" Click count: "</string>
    <string name="permission_for_notification_denied">permission for notification denied</string>
    <string name="location_channel">Location Channel</string>
    <string name="channel_for_displaying_location_addresses">Channel for displaying location addresses</string>
    <string name="notification_denied">Notification  denied</string>
    <string name="permission_granted_notifications_are_enabled">Permission granted, notifications are enabled.</string>
    <string name="notification_permission_granted">Notification permission granted</string>

    <string-array name="websites_array">
        <item>CBC</item>
        <item>BlackBoard</item>
        <item>CinePlex</item>
        <item>Local Welcome Page</item>
    </string-array>

    <string-array name="websites_url_array">
        <item>https://www.cbc.ca/</item>
        <item>https://learn.humber.ca/ultra/stream/</item>
        <item>https://www.cineplex.com//</item>
        <item>file:///android_asset/welcome.html</item>
    </string-array>
</resources>